--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>GIT </title>
 </head>
 <body>
-    
+    <h1>Sistemas de control de versiones</h1>
+
+    <h2>ejemplificacion GIT</h2>
 </body>
 </html>
